<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_video"
        android:title="@string/video"
        android:icon="@drawable/ic_action_video"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_maps"
        android:title="@string/mapa"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_edit"
        android:title="@string/editar"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/excluir"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>

</menu>